kermeta_projects/fr.irisa.triskell.kermeta.io/src/test/resources/constraintchecker_tests/invalid/032_assigned_to_self_01.kmt
/* $Id:$ 
 * Creation : March 31, 2010
 * Licence  : EPL 
 * Copyright:
 * Authors  : 
 *            dvojtise
 */



package root_package;


require kermeta
class Main
{
	attribute a : kermeta::standard::String 
	operation main() : Void is do 	
		self.a := a  	  // should raise a warning
		a := self.a  	  // should raise a warning
		self.a := self.a  // should raise a warning
		a := a  	 	  // should raise a warning
	end
	
}